[gd_scene load_steps=23 format=3 uid="uid://j5rtnnqlkamq"]

[ext_resource type="Script" path="res://Scenes/Drone/drone.gd" id="1_21xov"]
[ext_resource type="Texture2D" uid="uid://cp5q02uow63aq" path="res://art/Drone.png" id="2_6foph"]
[ext_resource type="Script" path="res://Scenes/Drone/StateMachine.gd" id="3_lyu0t"]
[ext_resource type="Script" path="res://Scenes/Drone/drone_chase.gd" id="4_6yv02"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ge3pk"]
atlas = ExtResource("2_6foph")
region = Rect2(0, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_6aur4"]
atlas = ExtResource("2_6foph")
region = Rect2(22, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0wfx"]
atlas = ExtResource("2_6foph")
region = Rect2(44, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8njd"]
atlas = ExtResource("2_6foph")
region = Rect2(66, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlua4"]
atlas = ExtResource("2_6foph")
region = Rect2(88, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltpdp"]
atlas = ExtResource("2_6foph")
region = Rect2(110, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufypc"]
atlas = ExtResource("2_6foph")
region = Rect2(132, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfue1"]
atlas = ExtResource("2_6foph")
region = Rect2(154, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_fiufv"]
atlas = ExtResource("2_6foph")
region = Rect2(176, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqmye"]
atlas = ExtResource("2_6foph")
region = Rect2(198, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_6o0u2"]
atlas = ExtResource("2_6foph")
region = Rect2(220, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xrhv"]
atlas = ExtResource("2_6foph")
region = Rect2(242, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hhi3"]
atlas = ExtResource("2_6foph")
region = Rect2(264, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_535d2"]
atlas = ExtResource("2_6foph")
region = Rect2(286, 0, 22, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_ymhrn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge3pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6aur4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0wfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8njd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlua4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltpdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufypc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfue1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fiufv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqmye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6o0u2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xrhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hhi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_535d2")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fginl"]
radius = 9.05539

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qvvv4"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nrqdw"]
bg_color = Color(1, 0.282353, 0.937255, 1)

[node name="Drone" type="Area2D"]
script = ExtResource("1_21xov")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ymhrn")
animation = &"idle"
autoplay = "idle"

[node name="DroneHitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_fginl")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -13.0
offset_top = -13.0
offset_right = 117.0
offset_bottom = 14.0
scale = Vector2(0.2, 0.05)
theme_override_styles/background = SubResource("StyleBoxFlat_qvvv4")
theme_override_styles/fill = SubResource("StyleBoxFlat_nrqdw")
value = 100.0
allow_greater = true
show_percentage = false

[node name="CanFollow" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_lyu0t")
initial_state = NodePath("drone_idle")

[node name="drone_idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("drone")]
script = ExtResource("4_6yv02")
drone = NodePath("../..")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="CanFollow" to="." method="_on_can_follow_timeout"]
